# graph_safe_compare

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
benches/: README.md  equiv.rs  random.rs
benches/common/: mod.rs
examples/: .rustfmt.toml  derived_eq.rs
src/: anticipated.rs  basic.rs  cycle_safe.rs  deep_safe.rs  equiv_classes.rs  generic.rs  lib.rs  like_anticipated.rs  like_unstable.rs  proto.rs  robust.rs  tests.rs  utils.rs  wide_safe.rs
src/alt/: basic.rs
src/alt/basic/: robust.rs
src/cycle_safe/modes/interleave/random/: fastrand.rs  mod.rs  oorandom.rs  wyrng.rs
src/generic/: equiv_classes.rs
test_no_std/: Cargo.toml  README.md
test_no_std/src/: lib.rs  main.rs
tests/: borrow_pair.rs  custom.rs  diff_edge.rs  diff_index.rs  dyn_pair.rs  lazy.rs  multi_tails.rs  ordering.rs  rc_pair.rs  wide.rs
tests/common/: borrow_pair.rs  rc_pair.rs
tests_utils/: Cargo.toml  README.md  build.rs
tests_utils/src/: lib.rs  shapes.rs
tests_utils/src/cases/: eq.rs
tests_utils/src/node_types/: borrow_pair.rs  diff_edge.rs  diff_index.rs  dyn_pair.rs  lazy.rs  rc_pair.rs  wide.rs
