[package]
name = "cycle_deep_safe_compare"
version = "0.0.0"
authors = ["Derick Eddington"]
license = "Unlicense"
repository = "https://github.com/DerickEddington/cycle_deep_safe_compare"
edition = "2021"

[workspace]
# The `test_no_std` package is independent, not a member of the workspace, so
# that it can use different settings, since it's a peculiar kind of integration test.
exclude = ["test_no_std"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
fastrand = "1"

[dev-dependencies]
tests_utils = { path = "tests_utils" }

[[example]]
name = "derived_eq"
crate-type = ["lib"]
test = true

[[test]]
name = "borrow_pair"
required-features = ["std"]

# Note: The "custom" test does not require any features.

[[test]]
name = "diff_edge"
required-features = ["std"]

[[test]]
name = "diff_index"
required-features = ["std"]

[[test]]
name = "dyn_pair"
required-features = ["std"]

[[test]]
name = "rc_pair"
required-features = ["std"]
