[package]
name = "tests_utils"
version = "0.0.0"
edition = "2021"
# The below are only defined to silence the clippy::cargo lint.
description = "Things useful to unit tests, integration tests, and benchmarks."
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/DerickEddington/graph_safe_compare"
categories = ["development-tools::testing"]
keywords = ["unpublished"]
